HTTP_Routing/2.35_HTTPBackendRef_ServicePort/gw-http-route-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-svc
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coffee-svc
  template:
    metadata:
      labels:
        app: coffee-svc
    spec:
      containers:
        - name: nginx
          image: docker.io/library/nginx:1.27-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: coffee-svc-nginx

---
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc
  namespace: web
spec:
  selector:
    app: coffee-svc
  ports:
    - name: http
      port: 80
      targetPort: 8080

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

        kinds:
          - kind: HTTPRoute

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backendref-port-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener

  hostnames:
    - coffee.f5bnk.com

  rules:
    - backendRefs:
        - name: coffee-svc
          kind: Service
          group: ""
          port: 80
